Analysis cleanup.